# ros_robot_controller

./: .gitignore  CMakeLists.txt  Node.md  outlog
.marscode/: deviceInfo.json
drc/: __init__.py
examples/C++/: CMakeLists.txt
examples/C++/include/: ur8_controller.hpp  ur8_controller_hqpid.hpp  ur8_controller_hqpik.hpp  ur8_controller_qpid.hpp  ur8_controller_qpik.hpp
examples/C++/src/: fr3_controller.cpp  main.cpp  ur8_controller.cpp  ur8_controller_HQPID.cpp  ur8_controller_HQPIK.cpp  ur8_controller_QPID.cpp  ur8_controller_QPIK.cpp
examples/robots/ur8/: scene.xml  ur8.srdf  ur8.urdf  ur8.xml
examples/robots/ur8/meshes/: base_link.STL  link5.STL  link8.STL  link_grasp_base.STL  link_grasp_left.STL  link_grasp_right.STL  link_knife.STL  link_tool.STL  world_link.STL
include/dyros_robot_controller/: QP_base.h
src/manipulator/: HQP_ID.cpp  HQP_IK.cpp  QP_ID.cpp  QP_IK.cpp
